--- a/Pear/Controllers/Onboarding/Get Started Flow/Short Bio Input/GetStartedShortBioViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Short Bio Input/GetStartedShortBioViewController.storyboard
@@ -38,7 +38,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rHP-8z-N7I">
-                                <rect key="frame" x="16" y="177" width="343" height="408"/>
+                                <rect key="frame" x="16" y="245.5" width="343" height="339.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -50,13 +50,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hype them up!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Dh4-oE-AMb">
-                                <rect key="frame" x="50" y="88" width="275" height="38.5"/>
+                                <rect key="frame" x="50" y="104" width="275" height="38.5"/>
                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a few things." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2JK-lB-JVq">
-                                <rect key="frame" x="50" y="138.5" width="275" height="26.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Good bios help friends stand out, leading to fun &amp; interesting conversations." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2JK-lB-JVq">
+                                <rect key="frame" x="50" y="154.5" width="275" height="79"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="22"/>
                                 <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -72,6 +72,13 @@
                                     <action selector="nextButtonClicked:" destination="jHD-ah-33t" eventType="touchUpInside" id="T14-c3-s0x"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-leaf" translatesAutoresizingMaskIntoConstraints="NO" id="RZj-Si-orL">
+                                <rect key="frame" x="157.5" y="36" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="T6h-Hd-kXF"/>
+                                    <constraint firstAttribute="width" secondItem="RZj-Si-orL" secondAttribute="height" multiplier="1:1" id="gmD-6n-1yL"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -79,12 +86,14 @@
                             <constraint firstItem="z4Q-kC-dUT" firstAttribute="bottom" secondItem="mbn-Xm-5zG" secondAttribute="bottom" constant="20" id="560-80-pBt"/>
                             <constraint firstItem="2JK-lB-JVq" firstAttribute="top" secondItem="Dh4-oE-AMb" secondAttribute="bottom" constant="12" id="A8N-hc-shU"/>
                             <constraint firstItem="z4Q-kC-dUT" firstAttribute="trailing" secondItem="Dh4-oE-AMb" secondAttribute="trailing" constant="50" id="BB8-No-azx"/>
+                            <constraint firstItem="RZj-Si-orL" firstAttribute="top" secondItem="z4Q-kC-dUT" secondAttribute="top" constant="16" id="Fgt-1s-X45"/>
                             <constraint firstItem="mbn-Xm-5zG" firstAttribute="leading" secondItem="z4Q-kC-dUT" secondAttribute="leading" constant="20" id="Jk2-vf-Mve"/>
+                            <constraint firstItem="Dh4-oE-AMb" firstAttribute="top" secondItem="RZj-Si-orL" secondAttribute="bottom" constant="8" id="KOJ-8W-Y27"/>
                             <constraint firstItem="Swo-Vo-QXP" firstAttribute="top" secondItem="z4Q-kC-dUT" secondAttribute="top" constant="20" id="Kmc-Hw-k9N"/>
                             <constraint firstItem="Swo-Vo-QXP" firstAttribute="leading" secondItem="z4Q-kC-dUT" secondAttribute="leading" constant="20" id="Puf-fs-cCu"/>
                             <constraint firstItem="QkO-ND-YLt" firstAttribute="bottom" secondItem="rHP-8z-N7I" secondAttribute="bottom" constant="-4" id="Q7Y-39-SQk"/>
+                            <constraint firstItem="RZj-Si-orL" firstAttribute="centerX" secondItem="z4Q-kC-dUT" secondAttribute="centerX" id="VuI-r4-ctl"/>
                             <constraint firstItem="z4Q-kC-dUT" firstAttribute="trailing" secondItem="mbn-Xm-5zG" secondAttribute="trailing" constant="20" id="diu-tM-Ayb"/>
-                            <constraint firstItem="Dh4-oE-AMb" firstAttribute="top" secondItem="Swo-Vo-QXP" secondAttribute="bottom" constant="8" id="f8N-ck-0TT"/>
                             <constraint firstItem="rHP-8z-N7I" firstAttribute="leading" secondItem="z4Q-kC-dUT" secondAttribute="leading" constant="16" id="gsd-C0-0D3"/>
                             <constraint firstItem="Dh4-oE-AMb" firstAttribute="leading" secondItem="z4Q-kC-dUT" secondAttribute="leading" constant="50" id="qs1-R9-TaK"/>
                             <constraint firstItem="z4Q-kC-dUT" firstAttribute="trailing" secondItem="rHP-8z-N7I" secondAttribute="trailing" constant="16" id="thN-Xo-e5j"/>
@@ -111,5 +120,6 @@
     </scenes>
     <resources>
         <image name="onboarding-back-button" width="96" height="96"/>
+        <image name="onboarding-icon-leaf" width="48" height="48"/>
     </resources>
 </document>
